--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,19 +9,32 @@
         android:targetSdkVersion="17" />
 
     <application
+        android:name="com.example.chromium_webview.ChromiumWebViewApplication"
+        android:hardwareAccelerated="false"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+         
         android:theme="@style/AppTheme" >
-        <activity
+<!--         <activity
             android:name="com.example.chromium_webview.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            </intent-filter> 
+        </activity> -->
+        
+        
+     <activity android:name="com.example.chromium_webview.AwShellActivity"
+        android:label="Android WebView Test Shell">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity> 
+    
     </application>
     
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
