--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
          
         android:theme="@style/AppTheme" >
-<!--         <activity
+       <activity
             android:name="com.example.chromium_webview.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -24,16 +24,16 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter> 
-        </activity> -->
+        </activity>
         
         
-     <activity android:name="com.example.chromium_webview.AwShellActivity"
+<!--      <activity android:name="com.example.chromium_webview.AwShellActivity"
         android:label="Android WebView Test Shell">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
-    </activity> 
+    </activity> --> 
     
     </application>
     
